# mdcitefix

./: CLAUDE.md  README.md  pyproject.toml
mdcitefix/: __init__.py  cli.py  core.py  normalize.py  parse.py
scripts/: corrupt_citations.py
tests/: __init__.py  test_basic.py  test_fixtures.py  test_performance.py
tests/fixtures/: README.md  TEST_SUMMARY.md
tests/fixtures/01__edge_cases__simple_renumber/: config.json  expected.md  input.md
tests/fixtures/02__edge_cases__complex_ranges/: config.json  expected.md  input.md
tests/fixtures/03__edge_cases__semicolon_separator/: expected.md  input.md
tests/fixtures/04__edge_cases__mixed_formats/: expected.md  input.md
tests/fixtures/05__edge_cases__unclosed_code_block/: expected.md  input.md  metadata.json
tests/fixtures/06__edge_cases__inline_code_protection/: expected.md  input.md
tests/fixtures/07__edge_cases__empty_citations/: expected.md  input.md
tests/fixtures/08__url_normalization__utm_params/: expected.md  input.md  metadata.json
tests/fixtures/09__url_normalization__fragments/: expected.md  input.md
tests/fixtures/10__url_normalization__case_normalization/: expected.md  input.md
tests/fixtures/11__url_normalization__trailing_slash/: expected.md  input.md
tests/fixtures/12__url_normalization__multiple_tracking_params/: expected.md  input.md
tests/fixtures/13__error_handling__missing_urls/: expected.md  input.md  metadata.json
tests/fixtures/14__error_handling__malformed_urls/: expected.md  input.md
tests/fixtures/15__error_handling__orphaned_citations/: config.json  expected.md  (+2 more)
(+106 files in other folders)
