[project]
name = "mdcitefix"
version = "0.1.0"
description = "Repair and normalize numeric citations in Markdown files"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = []

[project.scripts]
mdcitefix = "mdcitefix.cli:main"

[dependency-groups]
dev = [
    "prek>=0.2.27",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.pytest.ini_options]
markers = [
    "performance: performance benchmark tests (deselect with '-m \"not performance\"')",
]
